# Server

./: CMakeLists.txt
Source/: CMakeLists.txt
Source/Foundation/: Application.cpp  Application.hpp  Options.cpp  Options.hpp
Source/Foundation/Account/: Account.cpp  Account.hpp  AccountRepository.cpp  AccountRepository.hpp  AccountService.cpp  AccountService.hpp
Source/Foundation/Database/: Database.cpp  Database.hpp
Source/Foundation/Endpoint/: Endpoint.cpp  Endpoint.hpp  Peer.cpp  Peer.hpp
Source/Foundation/Endpoint/Packet/: GatewayPackets.hpp
Source/Private/: Main.cpp
Source/Private/Endpoint/: LobbyPackets.hpp  LobbyProtocol.cpp  LobbyProtocol.hpp
Source/Private/Game/: Account.cpp  Account.hpp  AccountService.cpp  AccountService.hpp  AccountServiceLocal.cpp  AccountServiceLocal.hpp
